syntax = "proto3";

package go.micro.service.download;

service DownloadService {
  rpc DownloadEntry(ReqEntry) returns (RespEntry) {}
}

message ReqEntry {}

message RespEntry {
  int32 code = 1;
  string message = 2;
  string entry = 3;
}

